mod_admin_predicate: Fix string escaping in translation text

--- a/modules/mod_admin_predicate/translations/et.po
+++ b/modules/mod_admin_predicate/translations/et.po
@@ -65,7 +65,7 @@ msgstr ""
 msgid ""
 "You can define for which categories the predicate is shown on the edit "
 "page.  You can also define which categories of objects will be found when "
-"searching for a page to connect to.  When you don\\'t check anything then "
+"searching for a page to connect to. When you don't check anything then "
 "all categories are valid."
 msgstr ""
 "Sa võid defineerida, mis kategooriates predikaati näidatakse redigeerimise lehel. "
