--- a/modules/mod_admin_predicate/translations/ru.po
+++ b/modules/mod_admin_predicate/translations/ru.po
@@ -67,7 +67,7 @@ msgid "Need more help?"
 msgstr "Нужна помощь?"
 
 #: modules/mod_admin_predicate/templates/_action_dialog_predicate_new.tpl:1
-msgid "Please fill in the title of the new predicate."
+msgid "Enter the title of the new predicate:"
 msgstr "Пожалуйста, укажите название нового предиката."
 
 #: modules/mod_admin_predicate/templates/admin_predicate.tpl:9
@@ -114,7 +114,7 @@ msgstr "Определен между"
 msgid ""
 "You can define for which categories the predicate is shown on the edit "
 "page.  You can also define which categories of objects will be found when "
-"searching for a page to connect to.  When you don\\'t check anything then "
+"searching for a page to connect to. When you don't check anything then "
 "all categories are valid."
 msgstr ""
 "Вы можете определить, для каких категорий предикат будет отображен на "
