--- a/modules/mod_admin_predicate/translations/es.po
+++ b/modules/mod_admin_predicate/translations/es.po
@@ -64,7 +64,7 @@ msgid "Need more help?"
 msgstr "¿Necesita más ayuda?"
 
 #: modules/mod_admin_predicate/templates/_action_dialog_predicate_new.tpl:1
-msgid "Please fill in the title of the new predicate."
+msgid "Enter the title of the new predicate:"
 msgstr ""
 
 #: modules/mod_admin_predicate/templates/admin_predicate.tpl:9
@@ -111,7 +111,7 @@ msgstr "Válido entre"
 msgid ""
 "You can define for which categories the predicate is shown on the edit "
 "page.  You can also define which categories of objects will be found when "
-"searching for a page to connect to.  When you don\\'t check anything then "
+"searching for a page to connect to. When you don't check anything then "
 "all categories are valid."
 msgstr ""
 "Puede definir para qué categorías se mostrará el predicado en la página de "
