--- a/modules/mod_admin/translations/tr.po
+++ b/modules/mod_admin/translations/tr.po
@@ -562,8 +562,8 @@ msgid "Next in category: "
 msgstr "Bu kategorideki bir sonraki:"
 
 #: modules/mod_admin/templates/admin_widget_dashboard_latest.tpl:57
-msgid "No items."
-msgstr "Öğe yok."
+msgid "No items"
+msgstr "Öğe yok"
 
 #: modules/mod_admin/templates/admin_media.tpl:71
 msgid "No media found."
