--- a/modules/mod_admin/translations/zh.po
+++ b/modules/mod_admin/translations/zh.po
@@ -604,8 +604,8 @@ msgid "Next in category: "
 msgstr "分类中的下一个："
 
 #: modules/mod_admin/templates/admin_widget_dashboard_latest.tpl:57
-msgid "No items."
-msgstr "无内容。"
+msgid "No items"
+msgstr "无内容"
 
 #: modules/mod_admin/templates/admin_media.tpl:71
 msgid "No media found."
