--- a/modules/mod_admin/translations/pl.po
+++ b/modules/mod_admin/translations/pl.po
@@ -605,8 +605,8 @@ msgid "Next in category: "
 msgstr "Następny w kategorii:"
 
 #: modules/mod_admin/templates/admin_widget_dashboard_latest.tpl:57
-msgid "No items."
-msgstr "Brak elementów."
+msgid "No items"
+msgstr "Brak elementów"
 
 #: modules/mod_admin/templates/admin_media.tpl:71
 msgid "No media found."
