--- a/modules/mod_admin/translations/de.po
+++ b/modules/mod_admin/translations/de.po
@@ -428,9 +428,9 @@ msgstr "Hilfe zu Veröffentlichungszeiträumen"
 
 #: modules/mod_admin/templates/_admin_edit_content.query.tpl:14
 msgid ""
-"Here you can edit the arguments of the  search query. Every argument goes on "
-"its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
+"Here you can edit the arguments of the search query. Every argument goes on "
+"its own line. For more information, see the "
+"<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Hier können Sie die Argumente einer Suchanfrage bearbeiten. Jedes Argument "
