--- a/modules/mod_admin/translations/es.po
+++ b/modules/mod_admin/translations/es.po
@@ -438,14 +438,14 @@ msgstr "Ayuda acerca de rangos de fechas de publicación"
 
 #: modules/mod_admin/templates/_admin_edit_content.query.tpl:14
 msgid ""
-"Here you can edit the arguments of the  search query. Every argument goes on "
-"its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
+"Here you can edit the arguments of the search query. Every argument goes on "
+"its own line. For more information, see the "
+"<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Aquí puede editar los argumentos de una consulta de búsqueda. Cada argumento "
-"va en su propia línea. Para más información ver la\n"
-"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
+"va en su propia línea. Para más información ver la "
+"<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentación de los argumentos de consulta</a> en el sitio web de "
 "Zotonic."
 
