--- a/modules/mod_admin/translations/et.po
+++ b/modules/mod_admin/translations/et.po
@@ -393,15 +393,15 @@ msgstr ""
 
 #: ./modules/mod_admin/templates/_admin_edit_content.query.tpl:14 
 msgid ""
-"Here you can edit the arguments of the  search query. Every argument goes "
-"on its own line. For more information, see the\n		<a "
-"href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html\">docu"
-"mentation on the query arguments</a> on the Zotonic website."
+"Here you can edit the arguments of the search query. Every argument goes on "
+"its own line. For more information, see the "
+"<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
+"\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Siin saad redigeerida otsingupäringute argumente. Iga argument eraldi real. "
-"Lisainformatsiooniks vaata\n          <a "
+"Lisainformatsiooniks vaata <a "
 "href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html\">"
-"päringute parameetride dokumentatsiooni/a> Zotonic'u veebilehel."
+"päringute parameetride dokumentatsiooni</a> Zotonic'u veebilehel."
 
 #: ./modules/mod_admin/templates/_admin_edit_content_person.tpl:14 
 msgid ""
