--- a/modules/mod_admin/translations/pl.po
+++ b/modules/mod_admin/translations/pl.po
@@ -422,14 +422,14 @@ msgstr "Termin publikacji - pomoc"
 
 #: modules/mod_admin/templates/_admin_edit_content.query.tpl:14
 msgid ""
-"Here you can edit the arguments of the  search query. Every argument goes on "
-"its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
+"Here you can edit the arguments of the search query. Every argument goes on "
+"its own line. For more information, see the "
+"<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "W tym miejscu możesz edytować argumenty wyszukiwania. Każdy argument musi "
 "znaleźć się w osobnej linii. Dodatkowe informacje na ten temat znajdują się "
-"na stronie \t\t<a href=\"http://zotonic.com/documentation/761/the-query-"
+"na stronie <a href=\"http://zotonic.com/documentation/761/the-query-"
 "search-model\">documentation on the query arguments (ang.)</a> na stronie "
 "projektu Zotonic."
 
