mod_admin: update translations

--- a/doc/manuals/i18n.rst
+++ b/doc/manuals/i18n.rst
@@ -113,7 +113,7 @@ changed strings in a ``.pot`` file and changes the translated strings
 in a language’s ``.po`` file accordingly::
 
   $ cd modules/mod_foo/translations
-  $ msgmerge -U nl.po templates/mod_foo.pot
+  $ msgmerge -U -N nl.po templates/mod_foo.pot
 
 This will merge the new strings into the existing ``nl.po``
 file. 
@@ -121,7 +121,7 @@ file.
 To update all ``.po`` files in the directory::
 
   $ cd modules/mod_foo/translations
-  $ find . -name "*.po" -print0 | xargs -0 -I file msgmerge -U file template/mod_foo.pot
+  $ find . -name "*.po" -print0 | xargs -0 -I file msgmerge -U -N file template/mod_foo.pot
 
 After doing this, you'll need to edit each ``po`` file again
 to check if there are new strings which need translation, edit
